--- a/template/package.json
+++ b/template/package.json
@@ -15,11 +15,10 @@
     "preact": "^8.4.2"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "@babel/core": "^7.7.2",
+    "@babel/runtime": "^7.7.2",
+    "babel-loader": "^8.0.6",
+    "babel-preset-airbnb": "^4.1.0",
     "css-loader": "^2.1.1",
     "eslint": "^5.14.1",
     "eslint-config-standard": "^12.0.0",
